add input tu put email

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>Bienvenido al Challenge de Rooftop</p>
+     <input type="mail" required id="email" value="tumailaqui@mail.com" type="text">
     <button id="execute">Resolver</button>
     <p id="result"><p>
     <script type="text/javascript" src="challenge.js"></script> 
